[gd_scene load_steps=15 format=2]

[ext_resource path="res://characters/Unit.gd" type="Script" id=1]
[ext_resource path="res://assets/knight_m.png" type="Texture" id=2]
[ext_resource path="res://assets/healthbar_border.png" type="Texture" id=3]
[ext_resource path="res://assets/healthbar_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/healthbar_background.png" type="Texture" id=5]
[ext_resource path="res://StatusTextureRect.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/HealthUI.gd" type="Script" id=7]
[ext_resource path="res://characters/color.gdshader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 1.0
shader_param/active = false

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathFollow2D/Sprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathFollow2D/Sprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "moving"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[node name="Unit" type="Path2D"]
curve = null
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotate = false
loop = false

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
material = SubResource( 6 )
texture = ExtResource( 2 )
offset = Vector2( 8, 0 )
hframes = 9
frame = 2

[node name="Area2D" type="Area2D" parent="PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="HealthUI" type="VBoxContainer" parent="PathFollow2D"]
margin_left = -7.0
margin_top = 9.0
margin_right = 25.0
margin_bottom = 21.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusContainer" type="HBoxContainer" parent="PathFollow2D/HealthUI"]
margin_right = 32.0
margin_bottom = 8.0
custom_constants/separation = 0

[node name="TextureRect" parent="PathFollow2D/HealthUI/StatusContainer" instance=ExtResource( 6 )]
margin_right = 8.0
margin_bottom = 8.0
texture = null

[node name="HealthBar" type="Control" parent="PathFollow2D/HealthUI"]
margin_top = 12.0
margin_right = 32.0
margin_bottom = 12.0
__meta__ = {
"_edit_group_": true
}

[node name="HealthBarUnder" type="TextureProgress" parent="PathFollow2D/HealthUI/HealthBar"]
modulate = Color( 1, 0.121569, 0.121569, 1 )
margin_top = -4.0
margin_right = 32.0
value = 100.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOver" type="TextureProgress" parent="PathFollow2D/HealthUI/HealthBar"]
margin_top = -4.0
margin_right = 32.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="PathFollow2D/HealthUI/HealthBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/damage = SubResource( 7 )
anims/idle = SubResource( 2 )
anims/moving = SubResource( 3 )
